--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="MultiLine.css">  
     <!-- D3.js Source -->
-    <script type= "text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+    <script type= "text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
   </head>        
   <body>
     <h1 style = "text-align:center; color:#0070A5"><bold>Energy Consumption Per Capita</bold></h1>
